<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.log_in.ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:layout_weight="1"
    android:background="@android:color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find_your_account"
        android:gravity="center"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@android:color/white"
        android:text="@string/enter_the_e_mail_address_linked_to_your_account"
        android:gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/forgot_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:background="#595353"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/black"
        android:hint="@string/e_mail_address"
        android:paddingStart="10dp"
        android:textStyle="bold"
        android:textColorHint="@android:color/black"
        tools:ignore="RtlSymmetry,TextFields"
        android:inputType="textEmailAddress"/>
    <Button
        android:id="@+id/forgot_password_send_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#1873E4"
        android:text="@string/send_e_mail"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>