<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_weight="1"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context="com.example.split.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:weightSum="10">


            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="top">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/arrow_left" />
            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_weight="9"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/sign_up_profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/profile_circle"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_overlay="false"
                    app:civ_border_width="4dp" />


                <EditText
                    android:id="@+id/sign_up_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:autofillHints="@string/name"
                    android:drawableStart="@drawable/account_36"
                    android:drawablePadding="7dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sign_up_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:autofillHints="@string/e_mail"
                    android:drawableStart="@drawable/account_box_outline_36"
                    android:drawablePadding="7dp"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sign_up_mobile_no"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:autofillHints="@string/mobile_no"
                    android:drawableStart="@drawable/numeric_36"
                    android:drawablePadding="7dp"
                    android:hint="@string/mobile_no"
                    android:inputType="phone"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/sign_up_password"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp"
                    android:drawableStart="@drawable/lock_outline_36"
                    android:drawablePadding="7dp"
                    android:hint="@string/create_a_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:autofillHints="@string/create_a_password" />


                <Button
                    android:id="@+id/btn_sign_up_account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_btn_background"
                    android:hint="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/sign_up_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:progress="@integer/google_play_services_version"
                    android:theme="@style/TextAppearance.AppCompat.Button"
                    android:visibility="invisible" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>