<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginBottom="0dp"
    android:layout_weight="1"
    android:background="@drawable/login_background"
    android:gravity="center"
    tools:context="com.example.split.activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            android:weightSum="10">


            <Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="top">

                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/arrow_left"
                    android:contentDescription="@string/todo" />
            </Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_weight="9"
                android:gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/image_icon2" />

                <EditText
                    android:id="@+id/log_in_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="25dp"
                    android:autofillHints="@string/e_mail"
                    android:drawableStart="@drawable/account_36"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:hint="@string/e_mail"
                    android:inputType="textEmailAddress"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/log_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="25dp"
                    android:autofillHints="@string/password"
                    android:drawableStart="@drawable/lock_outline_36"
                    android:drawablePadding="5dp"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <Button
                    android:id="@+id/log_in_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/signup_btn_background"
                    android:gravity="center"
                    android:hint="@string/forgot_password"
                    android:padding="3dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:textAllCaps="false"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_log_in_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/login_btn_background"
                    android:hint="@string/log_in"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/log_in_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp"
                    android:theme="@style/TextAppearance.AppCompat.Button"
                    android:visibility="invisible" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>